TAG: targetedalleleload-6-0-2-1
DATE: 02/23/2016
STAFF: sc
CHANGES: Project FL US181/TR12264/TR12265
1) new reports: bin/Dupe_MCL_assoc.py, bin/Orphaned_ApprovedAlleles.py
2) updated report bin/dupAlleleRpt.py
3) index.html - added new reports

TAG: targetedalleleload-6-0-1-3
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) tal_common.config.default: Don't override MAIL_LOG_PROC and MAIL_LOG_CUR

TAG: targetedalleleload-6-0-1-2
TAG: targetedalleleload-6-0-1-1
DATE: 10/20/2015
STAFF: lec
CHANGES:
1) TR12011/12070/scrum-dog/use new input file
see /mgi/all/wts_projects/12000/12011/tr12011.csh
2) added new input file
3) per Meiyee, made some changes to error log text

TAG: targetedalleleload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: targetedalleleload-5-2-1-4
DATE: 06/26/2015
STAFF: sc
CHANGES: TR12052 - removed some debug for eucomm that caused komp csd to fail

TAG: targetedalleleload-5-2-1-3
DATE: 06/16/2015
STAFF: sc
CHANGES: TR12052
* updated filterProjectIds method of TargetedAlleleLoad.java 
    targetedalleleload-5-2-1-3 to correctly report pids in the database 
    not in the input file

TAG: targetedalleleload-TR11750-1
DATE: 05/22/2015
STAFF: sc
CHANGES:
1)dupAlleleRpt.py, QCreport.py - remove references to WEBSHARE_URL, update
   group by query to be postgres friendly
2) QCReport.py - remove references to WEBSHARE_URL
3) tal_common.config.default - upped memory: JAVARUNTIMEOPTS="-Xms2g -Xmx2g"
4) KnockoutAllele.java - removed ALL_Marker_Assoc objects
5) Derivation.java - updated DerivationState camel case:
    state.setVectorTypeKey --> state.setVectortypeKey
    state.setParentCellLineKey --> state.setParentcellLineKey
    state.setDerivationTypeKey --> state.setDerivationtypeKey
6) TargetedAlleleLoad.java
* build a Vector of tables specifying the table order for bcp
* Fix the determination of PIDs in the database not in the input file (production bug also
    done on trunk) This is the 'filterProjectID method.