@@ -30,10 +30,12 @@ import os
 import db
 import string
 
+db.setAutoTranslate(False)
+db.setAutoTranslateBE(False)
+
 db.useOneConnection(1)
 
 outFilePath = os.environ['BASEDIR'] + "/duplicatedAllele.rpt"
-
 
 TAB= '\t'
 CRT = '\n'
