@@ -1,3 +1,10 @@
+TAG: targetedalleleload-6-0-4-1
+DATE: 04/29/2016
+STAFF: lec
+CHANGES: TR12069/postgres cleanup
+1) convert to Git
+2) add "db.setAutoTranslate"
+
 TAG: targetedalleleload-6-0-2-1
 DATE: 02/23/2016
 STAFF: sc
